date inputs hide on submit

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,10 +16,16 @@
 
 <footer class="footer">
   <div class="container">
-    <p class='text-muted'>
-      <br>
-      Made by <a href="http://www.smartfunnycool.com">Sam Ghitelman</a>
-    </p>
+    <div class="row">
+      <p class='col-lg-2 text-muted'>
+        <br>
+        Made by <a href="http://www.smartfunnycool.com">Sam Ghitelman</a>
+      </p>
+      <p class='col-lg-3 text-muted' style="float: right">
+        <br>
+        Loading Animation by <a href="http://codepen.io/PButcher/">Peter Butcher</a>
+      </p>
+    </div>
   </div>
 </footer>
 </body>
