--- a/app/views/timeline/index.html.erb
+++ b/app/views/timeline/index.html.erb
@@ -8,7 +8,7 @@
 </div>
 <div class="row">
   <%= form_tag("/search", method: "post", remote: true, id:"search-form") do %>
-  <div class="col-md-6 col-md-offset-3 input-group">
+  <div class="col-xs-8 col-xs-offset-2 input-group">
     <span class="input-group-addon" id="basic-addon1">1</span>
     <%= text_field_tag 'event1', "", class:"form-control", placeholder:"Event 1", 'aria-describedby':"basic-addon1"%>
     <span id="userDate1" class="input-group-addon" data-toggle="tooltip" data-placement="right" title="Select to input date yourself">
@@ -16,14 +16,18 @@
     </span>
 
   </div>
-  <div id="input_1" class="col-md-6 col-md-offset-3 input-group" style='display:none'>
+  <div id="input_1" class="col-xs-8 col-xs-offset-2 input-group" style='display:none'>
     <span class="input-group-addon" id="date_start1">Start</span>
     <%= date_field_tag "user1[start_event]", nil, class:"form-control", 'aria-describedby':"date_start1"%>
     <span class="input-group-addon" id="date_end1">End (optional)</span>
     <%= date_field_tag "user1[end_event]", nil, class:"form-control", 'aria-describedby':"date_end1"%>
+    <span class="input-group-addon">
+      Human?
+      <%= check_box_tag "user1[human]" %>
+    </span>
   </div>
 
-  <div class="col-md-6 col-md-offset-3 input-group">
+  <div class="col-xs-8 col-xs-offset-2 input-group">
     <span class="input-group-addon" id="basic-addon2">2</span>
     <%= text_field_tag 'event2', "", class:"form-control", placeholder:"Event 2", 'aria-describedby':"basic-addon2"%>
     <span id="userDate2" class="input-group-addon" data-toggle="tooltip" data-placement="right" title="Select to input date yourself">
@@ -31,14 +35,18 @@
     </span>
   </div>
 
-  <div id="input_2" class="col-md-6 col-md-offset-3 input-group" style='display:none'>
+  <div id="input_2" class="col-xs-8 col-xs-offset-2 input-group" style='display:none'>
     <span class="input-group-addon" id="date_start2">Start</span>
     <%= date_field_tag "user2[start_event]", nil, class:"form-control", 'aria-describedby':"date_start2"%>
     <span class="input-group-addon" id="date_end2">End (optional)</span>
     <%= date_field_tag "user2[end_event]", nil, class:"form-control", 'aria-describedby':"date_end2"%>
+    <span class="input-group-addon">
+      Human?
+      <%= check_box_tag "user2[human]" %>
+    </span>
   </div>
 
-  <div class="col-md-6 col-md-offset-3 input-group">
+  <div class="col-xs-8 col-xs-offset-2 input-group">
     <span class="input-group-addon" id="basic-addon3">3</span>
     <%= text_field_tag 'event3', "", class:"form-control", placeholder:"Event 3", 'aria-describedby':"basic-addon3"%>
     <span id="userDate3" class="input-group-addon" data-toggle="tooltip" data-placement="right" title="Select to input date yourself">
@@ -46,11 +54,15 @@
     </span>
   </div>
 
-  <div id="input_3" class="col-md-6 col-md-offset-3 input-group" style='display:none'>
+  <div id="input_3" class="col-xs-8 col-xs-offset-2 input-group" style='display:none'>
     <span class="input-group-addon" id="date_start2">Start</span>
     <%= date_field_tag "user3[start_event]", nil, class:"form-control", 'aria-describedby':"date_start2"%>
     <span class="input-group-addon" id="date_end2">End (optional)</span>
     <%= date_field_tag "user3[end_event]", nil, class:"form-control", 'aria-describedby':"date_end2"%>
+    <span class="input-group-addon">
+      Human?
+      <%= check_box_tag "user3[human]" %>
+    </span>
   </div>
 
   <br>
